@@ -16,6 +16,7 @@ requires "Dist::Zilla::Plugin::MinimumPerl" => "0";
 requires "Dist::Zilla::Plugin::OurPkgVersion" => "0.004";
 requires "Dist::Zilla::Plugin::PodWeaver" => "0";
 requires "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => "0";
+requires "Dist::Zilla::Plugin::PromptIfStale" => "0";
 requires "Dist::Zilla::Plugin::ReadmeFromPod" => "0.19";
 requires "Dist::Zilla::Plugin::RunExtraTests" => "0";
 requires "Dist::Zilla::Plugin::TaskWeaver" => "0.101620";
@@ -33,7 +34,7 @@ requires "Dist::Zilla::Role::PluginBundle::Easy" => "0";
 requires "Dist::Zilla::Role::PluginBundle::PluginRemover" => "0";
 requires "Moose" => "0.99";
 requires "Moose::Autobox" => "0";
-requires "Pod::Elemental::Transformer::List" => "0.101620";
+requires "Pod::Elemental::Transformer::List" => "0.102000";
 requires "Pod::Weaver" => "4";
 requires "Pod::Weaver::Config::Assembler" => "0";
 requires "Pod::Weaver::Plugin::Encoding" => "0";
